Hint: This is quite important. The datasets in the FROM clause do NOT indicate a drill-across over the datasets, since the drill-across will most likely be empty. Instead, we are querying a global cube that can be build from those single cubes.

* Refactored building of Logical Query Plan.
* Now using "definition" of global cube, i.e., drill-across of all fitting datasets.

==2014-07-09==
* Changed "default" measures, see http://linked-data-cubes.org/index.php/EmbeddedSesameEngine#Default_Measure_Strategies
* Now NestedLoopJoin does Concat in case all measures are the same.
* We should make sure that in case all measures are the same, it suffices to have one value
from either cubes.
* Currently does not work, try again!

==2014-07-09==
* Finished refactoring of logical2physical operator plan:

===LogicalToPhysical Query Plan Strategy===
* See also: http://linked-data-cubes.org/index.php/EmbeddedSesameEngine#LogicalToPhysical_Query_Plan_Strategy
* Short: First used Vistor Pattern, now use Depth-first strategy

<pre>

==2014-07-07==

* Filtering for duplicates at getDimensions(), getHierarchies()... on all "unique" attributes,

now that we have duplication strategy.

* Problem: I have never combined OLAP-to-SPARQL with Convert-Cube/Merge-Cubes.

* Solution: Why can I not implement Convert-Cube/Merge-Cubes using SPARQL in an extended OLAP-to-SPARQL

algorithm? Since 1) Convert-Cube/Merge-Cubes represent "implicit" datasets that I may want to materialise

for faster query processing, 2) whereas Projection, Dice, Slice are issued by the user explicitly,

Convert-Cube / Merge-Cubes are run automatically by the system to increase the number of answers to

an OLAP query (OLAP-to-SPARQL query is fixed on one dataset, OLAP query issues drill-across over all

possible datasets, returning several answers to a query.

* To do OLAP-to-SPARQL over Convert-Cube/Merge-Cubes, I need to execute Convert-Cube/Merge-Cubes separately

and only feed the data cube URI.

Problem:
